WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169407
Web Automation: automation commands hang when trying to navigate go/back and it's not possible
https://bugs.webkit.org/show_bug.cgi?id=169407
Summary
Web Automation: automation commands hang when trying to navigate go/back and ...
Carlos Garcia Campos
Reported
2017-03-09 01:54:27 PST
Trying to navigate back or forward when there are no back/forward items makes the web driver to hang, because navigation callback is never called.
Attachments
Patch
(2.82 KB, patch)
2017-03-09 01:58 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-03-09 01:58:25 PST
Created
attachment 303901
[details]
Patch
Blaze Burg
Comment 2
2017-03-10 15:09:32 PST
Comment on
attachment 303901
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=303901&action=review
r=me as well, nice catch.
> Source/WebKit2/ChangeLog:8 > + Trying to navigate back or forward when there are no back/forward items makes the web driver to hang, because
s/the web driver/automation command(s)/ There is no mention of WebDriver anywhere in the code, because WebAutomationSession and friends are intentionally isolated from WebDriver API and spec concerns. So I'd prefer you not plaster the name all over. =)
Carlos Garcia Campos
Comment 3
2017-03-13 02:21:49 PDT
Committed
r213790
: <
http://trac.webkit.org/changeset/213790
>
Blaze Burg
Comment 4
2017-05-12 10:06:29 PDT
<
rdar://problem/30288513
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug