Web Automation: automation commands hang when trying to navigate go/back and it's not possible https://bugs.webkit.org/show_bug.cgi?id=169407

Reviewed by Michael Catanzaro.

Trying to navigate back or forward when there are no back/forward items makes the automation commands to hang, because
navigation callback is never called. WebPageProxy returns nullptr to indicate no navigation will take place. In
that case we can consider that the operation succeeded.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::goBackInBrowsingContext):
(WebKit::WebAutomationSession::goForwardInBrowsingContext):

Canonical link: https://commits.webkit.org/186537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213790 268f45cc-cd09-0410-ab3c-d52691b4dbfc